Changes in bottom nav icons

--- a/app/src/main/res/layout/fragment_wallet_account.xml
+++ b/app/src/main/res/layout/fragment_wallet_account.xml
@@ -1293,7 +1293,7 @@
                                         android:layout_width="20dp"
                                         android:layout_height="20dp"
                                         android:layout_gravity="end"
-                                        android:src="@drawable/ic_fast_food" />
+                                        android:src="@drawable/ic_merchant" />
 
                                     <TextView
                                         android:layout_width="wrap_content"
