--- a/app/src/main/res/layout/dialog_pos_product_details.xml
+++ b/app/src/main/res/layout/dialog_pos_product_details.xml
@@ -161,7 +161,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:src="@drawable/ic_add"
-                                android:tint="@color/textColorPrimaryDark"/>
+                                app:tint="@color/textColorPrimaryDark" />
                         </LinearLayout>
 
 
