integrated POS in shop under merchant

--- a/app/src/main/res/layout/fragment_shop_pos.xml
+++ b/app/src/main/res/layout/fragment_shop_pos.xml
@@ -5,6 +5,20 @@
     android:layout_height="match_parent"
     android:background="@color/windowBackground"
     android:orientation="vertical">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_shop_pos"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_cart"
         android:layout_width="match_parent"
