--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -28,7 +28,7 @@
         android:id="@+id/walletCardsFragment"
         android:enabled="true"
         android:icon="@drawable/ic_card_btm_nav"
-        android:title="CARD"
+        android:title="CARDS"
         app:showAsAction="ifRoom"/>
 
     <item
