--- a/app/src/main/res/layout/dialog_agent_customer_deposit.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_deposit.xml
@@ -355,16 +355,16 @@
                     android:id="@+id/button_add_money"
                     style="@style/Button_DW"
                     android:layout_width="match_parent"
-                    android:layout_height="40dip"
+                    android:layout_height="32dp"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:background="@color/transparent"
                     android:backgroundTint="@color/textColor"
                     android:text="@string/submit"
-                    android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="@dimen/button_text_size"
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:layout_width="30dip"
