--- a/app/src/main/res/layout/dialog_enter_pin.xml
+++ b/app/src/main/res/layout/dialog_enter_pin.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/windowBackground">
+    android:background="@drawable/dialog_background">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,8 +32,7 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/edittext_corner"
             android:fontFamily="@font/josefin_sans"
-            android:hint="Create pin"
-            android:inputType="text"
+            android:inputType="numberPassword"
             android:padding="8dp"
             android:textColor="#000"
             android:textSize="16sp" />
