--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -24,7 +24,37 @@
             android:textColor="@color/white" />
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/balance_layout"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/top_rounded_blue"
+        android:layout_below="@id/titleLayout"
+        android:visibility="gone">
 
+        <TextView
+            android:id="@+id/balance_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Balance"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/balance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Balance"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/edittextlayout"
         android:layout_below="@id/titleLayout"
@@ -32,6 +62,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:orientation="vertical" >
+
 
         <EditText
             android:id="@+id/current_password"
